ext/rbs_extension/lexer.c
/* Generated by re2c 3.1 */
#line 1 "ext/rbs_extension/lexer.re"
#include "rbs_extension.h"

token rbsparser_next_token(lexstate *state) {
  lexstate backup;

  backup = *state;

  
#line 12 "ext/rbs_extension/lexer.c"
{
	unsigned int yych;
	unsigned int yyaccept = 0;
	yych = peek(state);
	switch (yych) {
		case 0x00000000: goto yy1;
		case '\t':
		case ' ': goto yy4;
		case '\n':
		case '\r': goto yy6;
		case '!': goto yy7;
		case '"': goto yy9;
		case '#': goto yy10;
		case '$': goto yy12;
		case '%': goto yy13;
		case '&': goto yy14;
		case '\'': goto yy15;
		case '(': goto yy16;
		case ')': goto yy17;
		case '*': goto yy18;
		case '+': goto yy19;
		case ',': goto yy20;
		case '-': goto yy21;
		case '.': goto yy22;
		case '/':
		case '~': goto yy24;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy25;
		case ':': goto yy27;
		case '<': goto yy29;
		case '=': goto yy31;
		case '>': goto yy33;
		case '?': goto yy34;
		case '@': goto yy35;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z': goto yy36;
		case '[': goto yy38;
		case ']': goto yy39;
		case '^': goto yy40;
		case '_': goto yy41;
		case '`': goto yy43;
		case 'a': goto yy45;
		case 'b': goto yy47;
		case 'c': goto yy48;
		case 'd': goto yy49;
		case 'e': goto yy50;
		case 'f': goto yy51;
		case 'g':
		case 'h':
		case 'j':
		case 'k':
		case 'l':
		case 'q':
		case 'r':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy52;
		case 'i': goto yy54;
		case 'm': goto yy55;
		case 'n': goto yy56;
		case 'o': goto yy57;
		case 'p': goto yy58;
		case 's': goto yy59;
		case 't': goto yy60;
		case 'u': goto yy61;
		case 'v': goto yy62;
		case '{': goto yy63;
		case '|': goto yy64;
		case '}': goto yy65;
		default: goto yy2;
	}
yy1:
	rbs_skip(state);
#line 145 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pEOF); }
#line 121 "ext/rbs_extension/lexer.c"
yy2:
	rbs_skip(state);
yy3:
#line 146 "ext/rbs_extension/lexer.re"
	{ return next_token(state, ErrorToken); }
#line 127 "ext/rbs_extension/lexer.c"
yy4:
	rbs_skip(state);
	yych = peek(state);
	if (yych == '\t') goto yy4;
	if (yych == ' ') goto yy4;
yy5:
#line 144 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tTRIVIA); }
#line 136 "ext/rbs_extension/lexer.c"
yy6:
	rbs_skip(state);
	goto yy5;
yy7:
	rbs_skip(state);
	yych = peek(state);
	if (yych == '=') goto yy24;
	if (yych == '~') goto yy24;
yy8:
#line 48 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tOPERATOR); }
#line 148 "ext/rbs_extension/lexer.c"
yy9:
	yyaccept = 0;
	rbs_skip(state);
	backup = *state;
	yych = peek(state);
	if (yych <= 0x00000000) goto yy3;
	goto yy67;
yy10:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= 0x00000000) goto yy11;
	if (yych != '\n') goto yy10;
yy11:
#line 59 "ext/rbs_extension/lexer.re"
	{
        return next_token(
          state,
          state->first_token_of_line ? tLINECOMMENT : tCOMMENT
        );
      }
#line 169 "ext/rbs_extension/lexer.c"
yy12:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= ')') {
		if (yych <= 0x0000001F) {
			if (yych <= '\n') {
				if (yych <= 0x00000000) goto yy3;
				if (yych <= 0x00000008) goto yy71;
				goto yy3;
			} else {
				if (yych == '\r') goto yy3;
				goto yy71;
			}
		} else {
			if (yych <= '#') {
				if (yych <= ' ') goto yy3;
				if (yych <= '"') goto yy73;
				goto yy71;
			} else {
				if (yych == '%') goto yy3;
				if (yych <= '\'') goto yy73;
				goto yy3;
			}
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= '/') {
				if (yych == '-') goto yy71;
				goto yy73;
			} else {
				if (yych <= '9') goto yy71;
				if (yych <= '>') goto yy73;
				goto yy71;
			}
		} else {
			if (yych <= '^') {
				if (yych == '\\') goto yy73;
				goto yy3;
			} else {
				if (yych <= 'z') goto yy71;
				if (yych <= '}') goto yy3;
				if (yych <= '~') goto yy73;
				goto yy71;
			}
		}
	}
yy13:
	yyaccept = 1;
	rbs_skip(state);
	backup = *state;
	yych = peek(state);
	if (yych == 'a') goto yy74;
	goto yy8;
yy14:
	rbs_skip(state);
#line 33 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pAMP); }
#line 227 "ext/rbs_extension/lexer.c"
yy15:
	yyaccept = 0;
	rbs_skip(state);
	backup = *state;
	yych = peek(state);
	if (yych <= 0x00000000) goto yy3;
	goto yy76;
yy16:
	rbs_skip(state);
#line 24 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pLPAREN); }
#line 239 "ext/rbs_extension/lexer.c"
yy17:
	rbs_skip(state);
#line 25 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pRPAREN); }
#line 244 "ext/rbs_extension/lexer.c"
yy18:
	rbs_skip(state);
	yych = peek(state);
	if (yych == '*') goto yy80;
#line 35 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pSTAR); }
#line 251 "ext/rbs_extension/lexer.c"
yy19:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= '/') goto yy8;
	if (yych <= '9') goto yy25;
	if (yych == '@') goto yy24;
	goto yy8;
yy20:
	rbs_skip(state);
#line 30 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pCOMMA); }
#line 263 "ext/rbs_extension/lexer.c"
yy21:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= '=') {
		if (yych <= '/') goto yy8;
		if (yych <= '9') goto yy25;
		goto yy8;
	} else {
		if (yych <= '>') goto yy81;
		if (yych == '@') goto yy24;
		goto yy8;
	}
yy22:
	yyaccept = 2;
	rbs_skip(state);
	backup = *state;
	yych = peek(state);
	if (yych == '.') goto yy82;
yy23:
#line 37 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pDOT); }
#line 285 "ext/rbs_extension/lexer.c"
yy24:
	rbs_skip(state);
	goto yy8;
yy25:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= '/') goto yy26;
	if (yych <= '9') goto yy25;
	if (yych == '_') goto yy25;
yy26:
#line 51 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tINTEGER); }
#line 298 "ext/rbs_extension/lexer.c"
yy27:
	yyaccept = 3;
	rbs_skip(state);
	backup = *state;
	yych = peek(state);
	switch (yych) {
		case '!': goto yy83;
		case '"': goto yy85;
		case '$': goto yy86;
		case '%':
		case '&':
		case '/':
		case '^':
		case '`':
		case '|':
		case '~': goto yy87;
		case '\'': goto yy88;
		case '*': goto yy89;
		case '+':
		case '-': goto yy90;
		case ':': goto yy91;
		case '<': goto yy92;
		case '=': goto yy93;
		case '>': goto yy94;
		case '@': goto yy95;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy96;
		case '[': goto yy98;
		default: goto yy28;
	}
yy28:
#line 44 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pCOLON); }
#line 383 "ext/rbs_extension/lexer.c"
yy29:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= ';') goto yy30;
	if (yych <= '<') goto yy24;
	if (yych <= '=') goto yy99;
yy30:
#line 46 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pLT); }
#line 393 "ext/rbs_extension/lexer.c"
yy31:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= '>') {
		if (yych <= '<') goto yy32;
		if (yych <= '=') goto yy100;
		goto yy101;
	} else {
		if (yych == '~') goto yy24;
	}
yy32:
#line 43 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pEQ); }
#line 407 "ext/rbs_extension/lexer.c"
yy33:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= '<') goto yy8;
	if (yych <= '>') goto yy24;
	goto yy8;
yy34:
	rbs_skip(state);
#line 34 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pQUESTION); }
#line 418 "ext/rbs_extension/lexer.c"
yy35:
	yyaccept = 0;
	rbs_skip(state);
	backup = *state;
	yych = peek(state);
	if (yych <= '^') {
		if (yych <= '?') goto yy3;
		if (yych <= '@') goto yy102;
		if (yych <= 'Z') goto yy103;
		goto yy3;
	} else {
		if (yych == '`') goto yy3;
		if (yych <= 'z') goto yy103;
		goto yy3;
	}
yy36:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= '=') {
		if (yych <= '/') {
			if (yych == '!') goto yy105;
		} else {
			if (yych <= '9') goto yy36;
			if (yych >= '=') goto yy106;
		}
	} else {
		if (yych <= '^') {
			if (yych <= '@') goto yy37;
			if (yych <= 'Z') goto yy36;
		} else {
			if (yych == '`') goto yy37;
			if (yych <= 'z') goto yy36;
		}
	}
yy37:
#line 130 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tUIDENT); }
#line 456 "ext/rbs_extension/lexer.c"
yy38:
	rbs_skip(state);
	yych = peek(state);
	if (yych == ']') goto yy107;
#line 26 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pLBRACKET); }
#line 463 "ext/rbs_extension/lexer.c"
yy39:
	rbs_skip(state);
#line 27 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pRBRACKET); }
#line 468 "ext/rbs_extension/lexer.c"
yy40:
	rbs_skip(state);
#line 32 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pHAT); }
#line 473 "ext/rbs_extension/lexer.c"
yy41:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= '=') {
		if (yych <= '/') {
			if (yych == '!') goto yy105;
		} else {
			if (yych <= '9') goto yy108;
			if (yych >= '=') goto yy106;
		}
	} else {
		if (yych <= '^') {
			if (yych <= '@') goto yy42;
			if (yych <= 'Z') goto yy111;
		} else {
			if (yych <= '_') goto yy113;
			if (yych <= '`') goto yy42;
			if (yych <= 'z') goto yy108;
		}
	}
yy42:
#line 133 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tULLIDENT); }
#line 497 "ext/rbs_extension/lexer.c"
yy43:
	yyaccept = 4;
	rbs_skip(state);
	backup = *state;
	yych = peek(state);
	if (yych <= ' ') {
		if (yych <= 0x00000000) goto yy44;
		if (yych <= 0x0000001F) goto yy114;
	} else {
		if (yych != ':') goto yy114;
	}
yy44:
#line 39 "ext/rbs_extension/lexer.re"
	{  return next_token(state, tOPERATOR); }
#line 512 "ext/rbs_extension/lexer.c"
yy45:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= 'r') {
		if (yych == 'l') goto yy115;
		goto yy53;
	} else {
		if (yych <= 's') goto yy116;
		if (yych <= 't') goto yy118;
		goto yy53;
	}
yy46:
#line 129 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tLIDENT); }
#line 527 "ext/rbs_extension/lexer.c"
yy47:
	rbs_skip(state);
	yych = peek(state);
	if (yych == 'o') goto yy119;
	goto yy53;
yy48:
	rbs_skip(state);
	yych = peek(state);
	if (yych == 'l') goto yy120;
	if (yych == 'o') goto yy121;
	goto yy53;
yy49:
	rbs_skip(state);
	yych = peek(state);
	if (yych == 'e') goto yy122;
	goto yy53;
yy50:
	rbs_skip(state);
	yych = peek(state);
	if (yych == 'n') goto yy123;
	if (yych == 'x') goto yy124;
	goto yy53;
yy51:
	rbs_skip(state);
	yych = peek(state);
	if (yych == 'a') goto yy125;
	goto yy53;
yy52:
	rbs_skip(state);
	yych = peek(state);
yy53:
	if (yych <= '=') {
		if (yych <= '/') {
			if (yych == '!') goto yy105;
			goto yy46;
		} else {
			if (yych <= '9') goto yy52;
			if (yych <= '<') goto yy46;
			goto yy106;
		}
	} else {
		if (yych <= '^') {
			if (yych <= '@') goto yy46;
			if (yych <= 'Z') goto yy52;
			goto yy46;
		} else {
			if (yych == '`') goto yy46;
			if (yych <= 'z') goto yy52;
			goto yy46;
		}
	}
yy54:
	rbs_skip(state);
	yych = peek(state);
	if (yych == 'n') goto yy126;
	goto yy53;
yy55:
	rbs_skip(state);
	yych = peek(state);
	if (yych == 'o') goto yy128;
	goto yy53;
yy56:
	rbs_skip(state);
	yych = peek(state);
	if (yych == 'i') goto yy129;
	goto yy53;
yy57:
	rbs_skip(state);
	yych = peek(state);
	if (yych == 'u') goto yy130;
	goto yy53;
yy58:
	rbs_skip(state);
	yych = peek(state);
	if (yych == 'r') goto yy131;
	if (yych == 'u') goto yy132;
	goto yy53;
yy59:
	rbs_skip(state);
	yych = peek(state);
	if (yych == 'e') goto yy133;
	if (yych == 'i') goto yy134;
	goto yy53;
yy60:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= 'q') {
		if (yych == 'o') goto yy135;
		goto yy53;
	} else {
		if (yych <= 'r') goto yy136;
		if (yych == 'y') goto yy137;
		goto yy53;
	}
yy61:
	rbs_skip(state);
	yych = peek(state);
	if (yych == 'n') goto yy138;
	if (yych == 's') goto yy139;
	goto yy53;
yy62:
	rbs_skip(state);
	yych = peek(state);
	if (yych == 'o') goto yy140;
	goto yy53;
yy63:
	rbs_skip(state);
#line 28 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pLBRACE); }
#line 637 "ext/rbs_extension/lexer.c"
yy64:
	rbs_skip(state);
#line 31 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pBAR); }
#line 642 "ext/rbs_extension/lexer.c"
yy65:
	rbs_skip(state);
#line 29 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pRBRACE); }
#line 647 "ext/rbs_extension/lexer.c"
yy66:
	rbs_skip(state);
	yych = peek(state);
yy67:
	if (yych <= '"') {
		if (yych <= 0x00000000) goto yy68;
		if (yych <= '!') goto yy66;
		goto yy69;
	} else {
		if (yych == '\\') goto yy70;
		goto yy66;
	}
yy68:
	*state = backup;
	if (yyaccept <= 3) {
		if (yyaccept <= 1) {
			if (yyaccept == 0) {
				goto yy3;
			} else {
				goto yy8;
			}
		} else {
			if (yyaccept == 2) {
				goto yy23;
			} else {
				goto yy28;
			}
		}
	} else {
		if (yyaccept <= 5) {
			if (yyaccept == 4) {
				goto yy44;
			} else {
				goto yy78;
			}
		} else {
			goto yy156;
		}
	}
yy69:
	rbs_skip(state);
#line 107 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tDQSTRING); }
#line 691 "ext/rbs_extension/lexer.c"
yy70:
	rbs_skip(state);
	yych = peek(state);
	if (yych == 'u') goto yy141;
	if (yych == 'x') goto yy142;
	goto yy66;
yy71:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= ',') {
		if (yych <= '\f') {
			if (yych <= 0x00000000) goto yy72;
			if (yych <= 0x00000008) goto yy71;
			if (yych >= '\v') goto yy71;
		} else {
			if (yych <= 0x0000001F) {
				if (yych >= 0x0000000E) goto yy71;
			} else {
				if (yych == '#') goto yy71;
			}
		}
	} else {
		if (yych <= '>') {
			if (yych <= '-') goto yy71;
			if (yych <= '/') goto yy72;
			if (yych <= '9') goto yy71;
		} else {
			if (yych <= '^') {
				if (yych <= 'Z') goto yy71;
			} else {
				if (yych <= 'z') goto yy71;
				if (yych >= 0x0000007F) goto yy71;
			}
		}
	}
yy72:
#line 140 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tGIDENT); }
#line 730 "ext/rbs_extension/lexer.c"
yy73:
	rbs_skip(state);
	goto yy72;
yy74:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= 'Z') {
		if (yych <= '(') {
			if (yych <= '\'') goto yy68;
			goto yy143;
		} else {
			if (yych == '<') goto yy144;
			goto yy68;
		}
	} else {
		if (yych <= 'z') {
			if (yych <= '[') goto yy145;
			goto yy68;
		} else {
			if (yych <= '{') goto yy146;
			if (yych <= '|') goto yy147;
			goto yy68;
		}
	}
yy75:
	rbs_skip(state);
	yych = peek(state);
yy76:
	if (yych <= '\'') {
		if (yych <= 0x00000000) goto yy68;
		if (yych <= '&') goto yy75;
	} else {
		if (yych == '\\') goto yy79;
		goto yy75;
	}
yy77:
	rbs_skip(state);
yy78:
#line 108 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tSQSTRING); }
#line 771 "ext/rbs_extension/lexer.c"
yy79:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= '\'') {
		if (yych <= 0x00000000) goto yy68;
		if (yych <= '&') goto yy75;
		goto yy148;
	} else {
		if (yych == '\\') goto yy79;
		goto yy75;
	}
yy80:
	rbs_skip(state);
#line 36 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pSTAR2); }
#line 787 "ext/rbs_extension/lexer.c"
yy81:
	rbs_skip(state);
#line 41 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pARROW); }
#line 792 "ext/rbs_extension/lexer.c"
yy82:
	rbs_skip(state);
	yych = peek(state);
	if (yych == '.') goto yy149;
	goto yy68;
yy83:
	rbs_skip(state);
	yych = peek(state);
	if (yych == '=') goto yy87;
	if (yych == '~') goto yy87;
yy84:
#line 127 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tSYMBOL); }
#line 806 "ext/rbs_extension/lexer.c"
yy85:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= '"') {
		if (yych <= 0x00000000) goto yy68;
		if (yych <= '!') goto yy85;
		goto yy150;
	} else {
		if (yych == '\\') goto yy151;
		goto yy85;
	}
yy86:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= ')') {
		if (yych <= 0x0000001F) {
			if (yych <= '\n') {
				if (yych <= 0x00000000) goto yy68;
				if (yych <= 0x00000008) goto yy152;
				goto yy68;
			} else {
				if (yych == '\r') goto yy68;
				goto yy152;
			}
		} else {
			if (yych <= '#') {
				if (yych <= ' ') goto yy68;
				if (yych <= '"') goto yy154;
				goto yy152;
			} else {
				if (yych == '%') goto yy68;
				if (yych <= '\'') goto yy154;
				goto yy68;
			}
		}
	} else {
		if (yych <= 'Z') {
			if (yych <= '/') {
				if (yych == '-') goto yy152;
				goto yy154;
			} else {
				if (yych <= '9') goto yy152;
				if (yych <= '>') goto yy154;
				goto yy152;
			}
		} else {
			if (yych <= '^') {
				if (yych == '\\') goto yy154;
				goto yy68;
			} else {
				if (yych <= 'z') goto yy152;
				if (yych <= '}') goto yy68;
				if (yych <= '~') goto yy154;
				goto yy152;
			}
		}
	}
yy87:
	rbs_skip(state);
	goto yy84;
yy88:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= '\'') {
		if (yych <= 0x00000000) goto yy68;
		if (yych <= '&') goto yy88;
		goto yy155;
	} else {
		if (yych == '\\') goto yy157;
		goto yy88;
	}
yy89:
	rbs_skip(state);
	yych = peek(state);
	if (yych == '*') goto yy87;
	goto yy84;
yy90:
	rbs_skip(state);
	yych = peek(state);
	if (yych == '@') goto yy87;
	goto yy84;
yy91:
	rbs_skip(state);
#line 45 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pCOLON2); }
#line 892 "ext/rbs_extension/lexer.c"
yy92:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= ';') goto yy84;
	if (yych <= '<') goto yy87;
	if (yych <= '=') goto yy158;
	goto yy84;
yy93:
	rbs_skip(state);
	yych = peek(state);
	if (yych == '=') goto yy159;
	if (yych == '~') goto yy87;
	goto yy68;
yy94:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= '<') goto yy84;
	if (yych <= '>') goto yy87;
	goto yy84;
yy95:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= '^') {
		if (yych <= '?') goto yy68;
		if (yych <= '@') goto yy160;
		if (yych <= 'Z') goto yy161;
		goto yy68;
	} else {
		if (yych == '`') goto yy68;
		if (yych <= 'z') goto yy161;
		goto yy68;
	}
yy96:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= '>') {
		if (yych <= '/') {
			if (yych == '!') goto yy163;
		} else {
			if (yych <= '9') goto yy96;
			if (yych == '=') goto yy163;
		}
	} else {
		if (yych <= '^') {
			if (yych <= '?') goto yy163;
			if (yych <= '@') goto yy97;
			if (yych <= 'Z') goto yy96;
		} else {
			if (yych == '`') goto yy97;
			if (yych <= 'z') goto yy96;
		}
	}
yy97:
#line 123 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tSYMBOL); }
#line 948 "ext/rbs_extension/lexer.c"
yy98:
	rbs_skip(state);
	yych = peek(state);
	if (yych == ']') goto yy159;
	goto yy68;
yy99:
	rbs_skip(state);
	yych = peek(state);
	if (yych == '>') goto yy24;
	goto yy8;
yy100:
	rbs_skip(state);
	yych = peek(state);
	if (yych == '=') goto yy24;
	goto yy8;
yy101:
	rbs_skip(state);
#line 42 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pFATARROW); }
#line 968 "ext/rbs_extension/lexer.c"
yy102:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= '^') {
		if (yych <= '@') goto yy68;
		if (yych <= 'Z') goto yy164;
		goto yy68;
	} else {
		if (yych == '`') goto yy68;
		if (yych <= 'z') goto yy164;
		goto yy68;
	}
yy103:
	rbs_skip(state);
	yych = peek(state);
	if (yych <= 'Z') {
		if (yych <= '/') goto yy104;
		if (yych <= '9') goto yy103;
		if (yych >= 'A') goto yy103;
	} else {
		if (yych <= '_') {
			if (yych >= '_') goto yy103;
		} else {
			if (yych <= '`') goto yy104;
			if (yych <= 'z') goto yy103;
		}
	}
yy104:
#line 137 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tAIDENT); }
#line 999 "ext/rbs_extension/lexer.c"
yy105:
	rbs_skip(state);
#line 134 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tBANGIDENT); }
#line 1004 "ext/rbs_extension/lexer.c"
yy106:
	rbs_skip(state);
#line 135 "ext/rbs_extension/lexer.re"
	{ return next_token(state, tEQIDENT); }
#line 1009 "ext/rbs_extension/lexer.c"
yy107:
	rbs_skip(state);
	yych = peek(state);
	if (yych == '=') goto yy24;
#line 47 "ext/rbs_extension/lexer.re"
	{ return next_token(state, pAREF_OPR); }
#line 1016 "ext/rbs_extension/lexer.c"
yy108:
	rbs_skip(state);
	yych = peek(state);
yy109:
	if (yych <= '=') {
		if (yych <= '/') {
			if (yych == '!') goto yy105;
		} else {
			if (yych <= '9') goto yy108;
			if (yych >= '=') goto yy106;
		}
	} else {
		if (yych <= '^') {
			if (yych <= '@') goto yy110;
			if (yych <= 'Z') goto yy108;
		} else {
